--- a/AUTHORS
+++ b/AUTHORS
@@ -650,6 +650,7 @@ Yongsheng Zhu <yongsheng.zhu@intel.com>
 Yoshinori Sano <yoshinori.sano@gmail.com>
 Youngho Seo <hazivoo@gmail.com>
 YoungKi Hong <simon.hong81@gmail.com>
+Youngmin Yoo <youngmin.yoo@samsung.com>
 Youngsoo Choi <kenshin.choi@samsung.com>
 Youngsun Suh <zard17@gmail.com>
 Yumikiyo Osanai <yumios.art@gmail.com>
