Match `path-part` with `url` case-sensitively
This fixes a bug where if final character of `path-part`
in `source-expression` is the U+002F SOLIDUS character (/),
matching with path of the `url` was performed case-insensitively.
Less strict matching can lead to CSP bypass in certain
circumstances or, at least, user confusion.

This fixes the bug by ensuring that `path-part` matching is
performed case-sensitively, per
https://w3c.github.io/webappsec-csp/#match-url-to-source-expression

BUG=590505
R=mkwst@chromium.org

Review URL: https://codereview.chromium.org/1872563004

Cr-Commit-Position: refs/heads/master@{#386032}

--- a/AUTHORS
+++ b/AUTHORS
@@ -550,6 +550,7 @@ Sean Bryant <sean@cyberwang.net>
 Seo Sanghyeon <sanxiyn@gmail.com>
 Seokju Kwon <seokju.kwon@gmail.com>
 Sergey Putilin <p.sergey@samsung.com>
+Sergey Shekyan <shekyan@gmail.com>
 Sergio Carlos Morales Angeles <carloschilazo@gmail.com>
 Sergiy Byelozyorov <rryk.ua@gmail.com>
 Seshadri Mahalingam <seshadri.mahalingam@gmail.com>
